syntax = "proto3";

package ai.metathings.service.identityd2;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "model.proto";

message CreateCredentialRequest {
	OpCredential credential = 1 [(validator.field) = {msg_exists: true}];
	google.protobuf.Int32Value secret_size = 2;
}

message CreateCredentialResponse {
	Credential credential = 1;
}
